tests/test108.rael.exp
Error [3:5]: 'break' is outside of a loop
|     break
|     ^
